-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.3
-
iOS 14.4
-
-
b050d4867f68c3d35493221d65d343749504c988 (qt/qtbase/dev) 516316e9a24fc3a290ce220a9a6cda0af541ca4c (qt/qtbase/6.1) 0ffd09bc3038920e02fb8934fe885184064a116a (qt/tqtc-qtbase/tqtc/lts-5.15) 0dcf8c232f327ea50573c57ae5ba2d6d72b9e7fb (qt/qtbase/6.0)
The app crashes with EXC_BAD_ACCESS when showing a new QQuickWindow after the first one is deleted.
It looks this is because it tries to set focus to the new window, but it still references the old window which has been deleted.
Here's the code to reproduce. Also the sample project is attached.
QGuiApplication ga(argc, argv);
{
QQuickWindow view;
view.show();
QEventLoop loop;
QTimer::singleShot(5000, &loop, &QEventLoop::quit);
loop.exec();
}
QQuickWindow view;
view.show();
return ga.exec();
| For Gerrit Dashboard: QTBUG-92173 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 340917,6 | iOS: Protect against a possible crash after the window is deleted | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 341266,2 | iOS: Protect against a possible crash after the window is deleted | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |
| 341267,2 | iOS: Protect against a possible crash after the window is deleted | 6.0 | qt/qtbase | Status: MERGED | +2 | 0 |
| 341268,2 | iOS: Protect against a possible crash after the window is deleted | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |